--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Joyce Hellen" />
+    <meta
+      name="description"
+      content="Um lugar para boa leitura com um cafézinho de lei"
+    />
+    <meta
+      name="keywords"
+      content="Coffee Shop, Estudos, HTML, CSS, Leitura, Café"
+    />
     <title>Joyce's Coffee Shop</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="vendor/normalize.css" />
