--- a/index.html
+++ b/index.html
@@ -23,16 +23,120 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="page">
       <header class="header">
-        Testando as fontes...Opss! Acho que não foi...verificar depois
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo da Biblioteca Triple Peaks"
+            class="nav__logo"
+          />
+
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#recipes">Receitas</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#reservation">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#contacts">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="header__content">
+          <div class="header__content-title">
+            <h1 class="header__title">
+              <span class="span-accent">Café especial</span>
+              na biblioteca Triple Peaks
+            </h1>
+            <p class="header__description">
+              Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+              você e vibrações aconchegantes para soltar a criatividade.
+            </p>
+          </div>
+          <img
+            src="./images/inside_coffee_shop.png"
+            alt="Ilustração 'Dentro da biblioteca'"
+            class="header__image"
+          />
+        </div>
+
+        <div class="header__footer">
+          <p class="header__footer-paragraph">Horários:</p>
+          <p class="header__footer-paragraph">
+            Segunda a sexta (10:00 - 19:00)
+          </p>
+
+          <div class="header__footer-right">
+            <p class="header__footer-paragraph">
+              Sábado a domingo (11:00 - 18:00)
+            </p>
+            <p class="header__footer-paragraph">
+              Triple Peaks, 200 Success Avenue
+            </p>
+          </div>
+        </div>
       </header>
+
       <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
+        <section id="recipes">
+          <div class="recipes__content">
+            <h2 class="recipes__title">Receitas</h2>
+            <h3 class="recipes__subtitle">
+              Confira algumas receitas que coletamos para seu lanchinho caseiro:
+            </h3>
+          </div>
+
+          <div class="recipes">
+            <div class="recipes__video">
+              <iframe
+                class="recipes__video-item recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=dquQ5sxW0TQyRoaE"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+
+              <div class="recipes__video-caption-container">
+                <p class="recipes__video-caption-1">Receita Aeropress</p>
+                <p class="recipes__video-caption-2">~5 min</p>
+              </div>
+            </div>
+
+            <div class="recipes__video">
+              <iframe
+                class="recipes__video-item recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=RnH4C9KJqOLr5ZaZ"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+
+              <div class="recipes__video-caption-container">
+                <p class="recipes__video-caption-1">
+                  Receita de Prensa Francesa
+                </p>
+
+                <p class="recipes__video-caption-2">~15 min</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="reservation">
+          <!-- Conteúdo futuro: Formulário para reservas -->
+        </section>
       </main>
-      <footer class="footer"></footer>
+
+      <footer class="footer">
+        <!-- Placeholder para futuras implementações -->
+      </footer>
     </div>
   </body>
 </html>
