--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </header>
 
       <main class="content">
-        <section id="recipes">
+        <section class="recipes" id="recipes">
           <div class="recipes__content">
             <h2 class="recipes__title">Receitas</h2>
             <h3 class="recipes__subtitle">
