--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
-              <a class="nav__link" href="#contacts">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -92,7 +92,7 @@
           </div>
 
           <div class="recipes">
-            <div class="recipes__video">
+            <div class="recipes__videos">
               <iframe
                 class="recipes__video-item recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=dquQ5sxW0TQyRoaE"
@@ -129,12 +129,12 @@
           </div>
         </section>
 
-        <section class="reservation">
+        <section class="reservation" id="reservation">
           <!-- Conteúdo futuro: Formulário para reservas -->
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <!-- Placeholder para futuras implementações -->
       </footer>
     </div>
