--- a/index.html
+++ b/index.html
@@ -66,18 +66,12 @@
         </div>
 
         <div class="header__footer">
-          <p class="header__footer-paragraph">Horários:</p>
-          <p class="header__footer-paragraph">
-            Segunda a sexta (10:00 - 19:00)
-          </p>
+          <p class="header__paragraph">Horários:</p>
+          <p class="header__paragraph">Segunda a sexta (10:00 - 19:00)</p>
 
-          <div class="header__footer-right">
-            <p class="header__footer-paragraph">
-              Sábado a domingo (11:00 - 18:00)
-            </p>
-            <p class="header__footer-paragraph">
-              Triple Peaks, 200 Success Avenue
-            </p>
+          <div class="header__right">
+            <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
+            <p class="header__paragraph">Triple Peaks, 200 Success Avenue</p>
           </div>
         </div>
       </header>
@@ -91,7 +85,7 @@
             </h3>
           </div>
 
-          <div class="recipes">
+          <div class="recipes__videos-content">
             <div class="recipes__videos">
               <iframe
                 class="recipes__video-item recipes__iframe"
@@ -103,8 +97,8 @@
               ></iframe>
 
               <div class="recipes__video-caption-container">
-                <p class="recipes__video-caption-1">Receita Aeropress</p>
-                <p class="recipes__video-caption-2">~5 min</p>
+                <p class="recipes__video-caption">Receita Aeropress</p>
+                <p class="recipes__video-caption">~5 min</p>
               </div>
             </div>
 
@@ -119,11 +113,8 @@
               ></iframe>
 
               <div class="recipes__video-caption-container">
-                <p class="recipes__video-caption-1">
-                  Receita de Prensa Francesa
-                </p>
-
-                <p class="recipes__video-caption-2">~15 min</p>
+                <p class="recipes__video-caption">Receita de Prensa Francesa</p>
+                <p class="recipes__video-caption">~15 min</p>
               </div>
             </div>
           </div>
