--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
 
         <section class="reservation" id="reservation">
-          <form class="reservation__form">
+          <form class="reservation__form reservation__form_active">
             <h2 class="reservation__title">Reservar uma mesa</h2>
 
             <fieldset class="reservation__form-fieldset">
@@ -174,13 +174,13 @@
               Reservar uma mesa
             </button>
 
-            <div class="reservation__input-container_ctrl_additional">
-              <label for="terms" class="reservation__label_direction_right">
+            <div class="reservation__input_container">
+              <label for="terms" class="reservation__label_input">
                 <input
                   type="checkbox"
                   id="terms"
                   name="terms"
-                  class="reservation__item_el_extra-options"
+                  class="reservation__item_options"
                   required
                 />
                 <span class="reservation__label-text"
