Nova atualizações de projeto

--- a/index.html
+++ b/index.html
@@ -174,13 +174,16 @@
               Reservar uma mesa
             </button>
 
-            <div class="reservation__input_container">
-              <label for="terms" class="reservation__label_input">
+            <div class="reservation__input reservation__input_container">
+              <label
+                for="terms"
+                class="reservation__label reservation__label_input"
+                >>
                 <input
                   type="checkbox"
                   id="terms"
                   name="terms"
-                  class="reservation__item_options"
+                  class="reservation__item reservation__item_options"
                   required
                 />
                 <span class="reservation__label-text"
