--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
 
         <section class="reservation" id="reservation">
-          <form class="reservation__form reservation__form_active">
+          <form class="reservation__form reservation__container">
             <h2 class="reservation__title">Reservar uma mesa</h2>
 
             <fieldset class="reservation__form-fieldset">
@@ -178,7 +178,7 @@
               <label
                 for="terms"
                 class="reservation__label reservation__label_input"
-                >
+              >
                 <input
                   type="checkbox"
                   id="terms"
