Nova atualizações de projeto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     />
     <title>Joyce's Coffee Shop</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -188,7 +187,45 @@
       </main>
 
       <footer class="footer" id="footer">
-        <!-- Placeholder para futuras implementações -->
+        <div class="footer__circle"></div>
+
+        <div class="footer__content">
+          <div>
+            <img
+              src="images/logo_coffeeshop_light.svg"
+              alt="Logo da cafeteria"
+              class="footer__logo"
+            />
+          </div>
+
+          <div class="footer__social">
+            <h3 class="footer__social_heading">Mídia Social</h3>
+            <ul class="footer__list">
+              <li class="footer__list_item">
+                <a class="footer__social_link">
+                  <img
+                    src="images/facebook_white.svg"
+                    alt="Ícone do Facebook"
+                    class="footer__social_icon"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list_item">
+                <a class="footer__social_link">
+                  <img
+                    src="images/instagram_white.svg"
+                    alt="Ícone do Instagram"
+                    class="footer__social_icon"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <p class="footer__copyright">© 2024 Joyce Hellen</p>
       </footer>
     </div>
   </body>
