--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
           </div>
 
           <div class="footer__social">
-            <h3 class="footer__social_heading">Mídia Social</h3>
+            <h3 class="footer__social footer__social_heading">Mídia Social</h3>
             <ul class="footer__list">
-              <li class="footer__list_item">
-                <a class="footer__social_link">
+              <li class="footer__list footer__list_item">
+                <a class="footer__social footer__social_link">
                   <img
                     src="images/facebook_white.svg"
                     alt="Ícone do Facebook"
-                    class="footer__social_icon"
+                    class="footer__social footer__social_icon"
                   />
                   Facebook
                 </a>
@@ -216,7 +216,7 @@
                   <img
                     src="images/instagram_white.svg"
                     alt="Ícone do Instagram"
-                    class="footer__social_icon"
+                    class="footer__social footer__social_icon"
                   />
                   Instagram
                 </a>
