--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                   Facebook
                 </a>
               </li>
-              <li class="footer__list_item">
-                <a class="footer__social_link">
+              <li class="footer__list footer__list_item">
+                <a class="footer__social footer__social_link">
                   <img
                     src="images/instagram_white.svg"
                     alt="Ícone do Instagram"
