--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
 
         <h1 class="header__title">
-          <span class="span-accent">Café especial</span>
+          <span class="header__span-accent">Café especial</span>
           na biblioteca Triple Peaks
         </h1>
         <p class="header__description">
